@@ -145,87 +145,32 @@ def verify_sender_cookie(sender_address,sender_cookie):
 def bounce_dated():
     """Bounce the message back to sender with a new dated cookie."""
     now = time.time()
+    timeout = Util.format_timeout(Defaults.TIMEOUT)
     expire_date = now + Util.seconds(Defaults.TIMEOUT)
     expire_utc_tuple = time.gmtime(expire_date)
+    utc_expire_date = time.asctime(expire_utc_tuple)
     dated_cookie = Cookie.make_dated_cookie('%d' % now)
-    bounce_message = make_dated_bounce(expire_utc_tuple,dated_cookie)
+
     logit("BOUNCE dated",now)
 
     if Defaults.BOUNCE_DATED_CC:
         bounce_cc(Defaults.BOUNCE_DATED_CC)
-    
+
+    bounce_message = Util.maketext('bounce_dated.txt',vars())
     print bounce_message
     sys.exit(Defaults.ERR_HARD)
 
 
 def bounce_sender(sender_address,sender_address_cookie):
     """Bounce the message back to sender with their sender cookie."""
-    bounce_message = make_sender_bounce(sender_address,sender_address_cookie)
     logit("BOUNCE sender",time.time())
 
     if Defaults.BOUNCE_SENDER_CC:
         bounce_cc(Defaults.BOUNCE_SENDER_CC)
 
+    bounce_message = Util.maketext('bounce_sender.txt',vars())
     print bounce_message
     sys.exit(Defaults.ERR_HARD)
-
-
-def make_dated_bounce(expire_utc_tuple,dated_cookie):
-    """Create a 'dated' style nastygram to send back with the bounce."""
-    timeout = Util.format_timeout(Defaults.TIMEOUT)
-    utc_expire_date = time.asctime(expire_utc_tuple)
-    tmda_url = Defaults.TMDA_HOMEPAGE
-
-    nastygram = \
-    """                                                                      
-    This notice was generated by TMDA v%s %s.
-    Your e-mail message was not accepted either because:
-    
-        1) The recipient didn't recognize your address, OR 
-        2) The `dated' address you sent to was invalid or expired.
-        
-    You can contact me at the following address:
-    
-        <mailto:%s-dated-%s@%s>
-        
-    which will expire in %s (%s UTC).
-    If you're just sending me SPAM/UCE, buzz off.
-                                                                             
-    Regards,
-    %s"""% (Defaults.TMDA_VERSION, Defaults.TMDA_HOMEPAGE, Defaults.USERNAME,
-            dated_cookie,Defaults.HOSTNAME, timeout, utc_expire_date,
-            Defaults.FULLNAME)
-        
-    return nastygram
-
-
-def make_sender_bounce(sender_address,sender_address_cookie):
-    """Create a 'sender' style nastygram to send back with the bounce."""
-            
-    nastygram = \
-    """                                                                      
-    This notice was generated by TMDA v%s %s.
-    Your e-mail message was not accepted either because:
-    
-        1) The recipient didn't recognize your address, OR 
-        2) The `sender' address you sent to was invalid.
-        
-    You can contact me at the following address:
-    
-        <mailto:%s-sender-%s@%s>
-        
-    which will only work when you are sending me e-mail from:
-                                                             
-        <%s>
-                                                          
-    If you're just sending me SPAM/UCE, buzz off.
-                                                                             
-    Regards.
-    %s"""% (Defaults.TMDA_VERSION,Defaults.TMDA_HOMEPAGE, Defaults.USERNAME,
-            sender_address_cookie,Defaults.HOSTNAME, sender_address,
-            Defaults.FULLNAME)
-    
-    return nastygram
 
 
 ######
