@@ -1,0 +1,16 @@
+                                                                     
+This notice was generated by TMDA v%(TMDA_VERSION)s %(TMDA_HOMEPAGE)s.
+Your e-mail message was not accepted either because:
+    
+    1) The recipient didn't recognize your address, OR 
+    2) The `dated' address you sent to was invalid or expired.
+        
+You can contact me at the following address:
+    
+    <mailto:%(USERNAME)s-dated-%(dated_cookie)s@%(HOSTNAME)s>
+        
+which will expire in %(timeout)s (%(utc_expire_date)s UTC).
+If you're just sending me SPAM/UCE, buzz off.
+                                                                             
+Regards,
+%(FULLNAME)s
