@@ -1,0 +1,19 @@
+                                                                     
+This notice was generated by TMDA v%(TMDA_VERSION)s %(TMDA_HOMEPAGE)s.
+Your e-mail message was not accepted either because:
+    
+    1) The recipient didn't recognize your address, OR 
+    2) The `sender' address you sent to was invalid.
+        
+You can contact me at the following address:
+    
+    <mailto:%(USERNAME)s-sender-%(sender_address_cookie)s@%(HOSTNAME)s>
+        
+which will only work when you are sending me e-mail from:
+                                                             
+    <%(sender_address)s>
+                                                          
+If you're just sending me SPAM/UCE, buzz off.
+                                                                             
+Regards,
+%(FULLNAME)s
