@@ -1,3 +1,7 @@
+2001-05-02  Jason R. Mastaler  <jasonrm@nightshade.acl.lanl.gov>
+
+	* Util.py (maketext): New function to make text from a template file.
+
 2001-05-01  Jason R. Mastaler  <jasonrm@nightshade.acl.lanl.gov>
 
 	* Defaults.py: To speed startup, the user's .tmdarc is now read
